# tunemyfi-variation-poc

./: .gitignore  main.py  pyproject.toml
data/ranked/: apple-airpods-pro-3-review.ranked.json  b-w-px8-s2-review.ranked.json  bose-qc-ultra-gen2-review.ranked.json  sennheiser-hdb-630-review.ranked.json  sony-wh-1000xm6-review.ranked.json  아이유-밤편지-라이브.ranked.json
data/samples/: bad_video.json  sample_video.json
data/variations/: 아이유-밤편지-라이브.json
data/verdict-test/: qwen32b.txt  r1-70b.txt
data/verdicts/: apple-airpods-pro-3-review.verdict.json  b-w-px8-s2-review.verdict.json  bose-qc-ultra-gen2-review.verdict.json  (+2 more)
prompts/: variation_judge_v1.txt  variation_judge_v2.txt
src/app/: page.tsx
web/: BACKGROUND_JOBS.md  BGM_GENERATION_UPDATE.md  BGM_STYLE_TEXT_CARD_UPDATE.md  CARD_COMPACT_ALIGN_UPDATE.md  CARD_COMPACT_BGM_OPEN_COMPOSER_UPDATE.md  CARD_TEXT_RICH_2LINES_UPDATE.md  JOB_RECOVERY_UPDATE.md  LONGFORM_SHORTS_POSITIVE_UPDATE.md  NARRATION_CARD_TYPO_UPDATE.md  NARRATION_POSITIVE_BALANCE_UPDATE.md  NARRATION_PREPARE_NAMEERROR_FIX.md  NARRATION_REVIEW_UPDATE.md  NARRATION_TIMED_CAPTIONS_UPDATE.md  OUTPUT_ORDER_SHORTS_WATERMARK_FIX.md  PREMIUM_VIDEO_STYLE_UPDATE.md  PRONUNCIATION_DICTIONARY_UI.md  REMOVE_BOTTOM_RIGHT_WATERMARK.md  REMOVE_COMMUNITY_SCORE_UPDATE.md  REMOVE_DIGIT_PRONUNCIATION_UPDATE.md  SMOOTH_TRANSITIONS_UPDATE.md  SPOKEN_EDIT_FIX.md  SUMMARY_SECTION_SPACING_UPDATE.md  SUMMARY_WATERMARK_UPDATE.md  TITLE_GAP_TRANSITIONS_UPDATE.md  VIDEO_OVERLAY_UPDATE.md  WATERMARK_ALIGN_FIX.md  WATERMARK_CENTER_FIX_V2.md  package-lock.json  package.json
(+58 files in other folders)
