[project]
name = "tunemyfi-variation-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "curl-cffi>=0.15.0",
    "edge-tts>=7.2.8",
    "kokoro-onnx>=0.5.0",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "soundfile>=0.14.0",
]
